--- a/package.json
+++ b/package.json
@@ -7,5 +7,17 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Eric Ladage",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "react": "^16.7.0"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/eladage/js-test.git"
+  },
+  "bugs": {
+    "url": "https://github.com/eladage/js-test/issues"
+  },
+  "homepage": "https://github.com/eladage/js-test#readme"
 }
